--- a/src/app/modules/landing-page/main/main.component.html
+++ b/src/app/modules/landing-page/main/main.component.html
@@ -1,36 +1,43 @@
 <main>
-  <div
-    class="w-full py-8 flex justify-between mx-auto max-w-[1520px] align-middle"
-  >
-    <div>
-      <div class="w-14 h-14 bg-zinc-300 rounded-full"></div>
+  <nav class="w-full bg-white">
+    <div class="py-4 flex justify-between mx-auto max-w-[1520px] align-middle">
+      <div>
+        <div class="w-14 h-14 bg-zinc-300 rounded-full"></div>
+      </div>
+      <div class="flex items-center">
+        <ul class="flex gap-x-6">
+          <li class="nav-link" routerLink="/home">Início</li>
+          <li class="nav-link" routerLink="/list">Mundos</li>
+          <li class="nav-link" routerLink="/tabletop/1">Features</li>
+        </ul>
+      </div>
+      <div class="flex items-center relative gap-x-6">
+        <button pButton label="Cadastre-se"
+        routerLink="/signup"></button>
+        <i
+          id="userIco"
+          class="pi pi-user cursor-pointer"
+          style="font-size: 1.5rem"
+          (click)="toggleLogin()"></i>
+          @if(showLogin){
+            <app-login class="absolute right-0 top-[64px]"/>
+          }
+      </div>
     </div>
-    <div class="flex items-center">
-      <ul class="flex gap-x-6">
-        <li class="nav-link">Início</li>
-        <li class="nav-link">Noticias</li>
-        <li class="nav-link">Features</li>
-      </ul>
-    </div>
-    <div>
-      <i class="pi pi-user cursor-pointer" style="font-size: 2rem"></i>
-    </div>
-  </div>
+  </nav>
 
   <section class="w-full max-w-[1520px] mx-auto mt-24">
     <article class="flex justify-evenly gap-x-6">
-        <div>
-          <h1 class="text-5xl font-bold text">
-            Explore vários universos em uma Plataforma para RPGs. Transforme suas
-            aventuras em momentos inesquecíveis.
-          </h1>
-          <div class="mt-6">
-            <button class="btn-primary">
-              Começar Exploração
-            </button>
-          </div>
+      <div>
+        <h1 class="text-5xl font-bold text">
+          Explore vários universos em uma Plataforma para RPGs. Transforme suas
+          aventuras em momentos inesquecíveis.
+        </h1>
+        <div class="mt-6">
+          <button class="btn-primary">Começar Exploração</button>
         </div>
-        <img src="https://placehold.co/600x400" alt="Placeholder">
+      </div>
+      <img src="https://placehold.co/600x400" alt="Placeholder" />
     </article>
   </section>
 </main>
