--- a/src/app/modules/landing-page/main/components/login/login.component.html
+++ b/src/app/modules/landing-page/main/components/login/login.component.html
@@ -1,4 +1,4 @@
-<article class="bg-zinc-100 border-zinc-400 border-2 rounded-lg py-4 px-7 min-w-80 xl:w-[412px]">
+<article class="bg-zinc-100 border-zinc-400 border-2 rounded-lg py-4 px-7 min-w-80 xl:w-[412px] z-[999]">
   <h2 class="mb-3 font-bold text-3xl text-center">Login</h2>
   <form [formGroup]="loginForm"  (ngSubmit)="submitLogin()">
     <div class="flex flex-col my-3">
@@ -22,9 +22,9 @@
         [style]="{ width: '100%' }"
         [inputStyle]="{ width: '100%' }"
       />
-      <span class="text-blue-700 mt-1">Esqueci minha senha</span>
+      <span class="text-blue-700 mt-2 cursor-pointer">Esqueci minha senha</span>
     </div>
 
-    <button pButton icon="pi pi-user" label="Acessar" class="w-full" type="submit"></button>
+    <button pButton icon="pi pi-user" label="Acessar" class="w-full pointer" type="submit"></button>
   </form>
 </article>
