--- a/src/app/modules/landing-page/register/register.component.html
+++ b/src/app/modules/landing-page/register/register.component.html
@@ -32,8 +32,8 @@
             id="password"
             aria-describedby="user password"
             formControlName="password"
-            [style]="{ width: '100%' }"
-            [inputStyle]="{ width: '100%' }"
+            [style]="{ width: '100%', zindex: 1}"
+            [inputStyle]="{ width: '100%', zindex: 1 }"
           />
         </div>
 
