--- a/src/app/modules/user/world-list/components/world-card/world-card.component.html
+++ b/src/app/modules/user/world-list/components/world-card/world-card.component.html
@@ -1,4 +1,4 @@
-<div class="p-8 bg-white w-[256px] hover:scale-110 transition duration-300 cursor-pointer"
+<div class="p-8 bg-white w-[256px] hover:scale-110 transition duration-300 cursor-pointer rounded-md"
 [routerLink]="['/tabletop/', world.id]">
     <span class="pi pi-globe" style="font-size: 2rem;"></span>
     <h1 class="text-3xl mt-4">{{world.name}}</h1>
