--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,17 +1,17 @@
 <nav class="w-full bg-white">
   <div class="py-4 flex justify-between mx-auto max-w-[1520px] align-middle">
-    <div>
+    <div class="w-1/4 justify-center">
       <div class="w-14 h-14 bg-zinc-300 rounded-full"></div>
     </div>
-    <div class="flex items-center">
+    <div class="flex items-center w-1/2 justify-center">
       <ul class="flex gap-x-6">
         <li class="nav-link" routerLink="/home">Início</li>
         <li class="nav-link" routerLink="/list">Mundos</li>
         <li class="nav-link" routerLink="/tabletop/1">Features</li>
       </ul>
     </div>
-    <div class="flex items-center relative gap-x-6">
-      @if(true){
+    <div class="flex items-center relative gap-x-6 w-1/4 justify-center">
+      @if(!getUserToken){
       <button pButton label="Cadastre-se" routerLink="/signup"></button>
       <button
         pButton
@@ -21,7 +21,11 @@
       ></button>
       @if(showLogin){
       <app-login (blur)="toggleLogin()" class="absolute right-0 top-[64px] z-50" />
-      } }
+      } 
+    }
+      @else {
+        <p-button icon="pi pi-user" [rounded]="true" severity="info" (click)="logout()"/>
+      }
     </div>
   </div>
 </nav>
