--- a/src/app/modules/user/home/home.component.html
+++ b/src/app/modules/user/home/home.component.html
@@ -1,6 +1,4 @@
 <main>
-    <app-navbar />
-    <section class="w-5/6 mx-auto mt-4 bg-white rounded-lg p-4">
-        <p>home works!</p>
-    </section>    
+  <app-navbar />
+  <section class="mx-auto mt-12 w-10/12 bg-white p-4 rounded-md"></section>
 </main>
