--- a/src/app/modules/user/world-list/world-list.component.html
+++ b/src/app/modules/user/world-list/world-list.component.html
@@ -1,6 +1,6 @@
 <main>
   <app-navbar />
-  <section class="mx-auto mt-16 w-10/12">
+  <section class="mx-auto mt-12 w-10/12 bg-white p-4 rounded-md">
     <div class="mb-8">
       <button pButton class="btn-primary" (click)="openWorldDialog()">
         <span class="pi pi-plus"></span>
@@ -12,10 +12,34 @@
       />
     </div>
     @if(worlds.length){
-      <article class="flex gap-x-6 gap-y-6 flex-wrap">
-        @for (world of worlds; track $index) {
-        <app-world-card [world]="world"></app-world-card>
-        }
+      <article>
+        <p-table [value]="worlds" [tableStyle]="{ 'min-width': '50rem' }" [rowHover]="true"
+        [rows]="10" [paginator]="true">
+          <ng-template #header>
+              <tr>
+                  <th>Nome do Mundo</th>
+                  <th>Criador</th>
+                  <th>Visibilidade</th>
+                  <th>Sistema</th>
+              </tr>
+          </ng-template>
+          <ng-template #body let-world>
+              <tr class="cursor-pointer" (click)="selectWorld(world)">
+                  <td>{{ world.name }}</td>
+                  <td>{{ world.user.username | titlecase }} </td>
+                  <td>
+                    <p-chip [label]="world.public ? 'Público' : 'Privado'" class="text-white"
+                    [ngClass]="world.public ? ' bg-green-500 ': ' bg-blue-600 '"/>
+                  </td>
+                  <td>{{ world.system ?? "-" }}</td>
+              </tr>
+          </ng-template>
+          <ng-template #emptymessage>
+            <tr>
+                <td colspan="4">Nenhum mundo encontrado...</td>
+            </tr>
+        </ng-template>
+      </p-table>
       </article>
     }
     @else{
