feat: world list, link para acessar o mundo corrigido

--- a/src/app/modules/landing-page/main/components/login/login.component.html
+++ b/src/app/modules/landing-page/main/components/login/login.component.html
@@ -5,6 +5,7 @@
       <label for="username">Nome de Usuário</label>
       <input
         pInputText
+        pAutoFocus="true"
         id="username"
         aria-describedby="username"
         formControlName="username"
