--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="w-full bg-white">
   <div class="py-4 flex justify-between mx-auto max-w-[1520px] align-middle">
     <div class="w-1/4 flex items-center justify-center">
-      <div class="w-14 h-14 bg-zinc-300 rounded-full" routerLink="['/']"></div>
+      <img src="qck-logo.svg"
+      class="w-28 h-auto cursor-pointer" routerLink="['/']"/>
     </div>
     <div class="flex items-center w-1/2 justify-center">
       <ul class="flex gap-x-6">
