--- a/src/app/modules/user/profile/profile.component.html
+++ b/src/app/modules/user/profile/profile.component.html
@@ -1,1 +1,14 @@
-<p>profile works!</p>
+<!-- landing-page.component.html -->
+<div class="min-h-screen">
+    <!-- Hero Section -->
+    <section class="flex flex-col items-center justify-center text-center py-20 px-6">
+      <h1 class="text-4xl font-bold mb-4">Bem-vindo ao QuickAttack</h1>
+      <p class="text-lg max-w-2xl">
+        O tabuleiro virtual que revoluciona o modo como você joga RPG.
+      </p>
+    </section>
+  
+    <!-- Features Section -->
+
+  </div>
+  
