--- a/src/app/modules/tabletop/tabletop/tabletop.component.css
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.css
@@ -2,13 +2,15 @@
     width: 100vw;
     height: 100vh;
     background-color: black;
+    position: relative;
 }
 
 .chat {
+    width: 100%;
     overflow-y: auto;
     padding: 12px;
     row-gap: 12px;
-    height: 75%;
+    flex: 1 0;
 }
 
 .message {
