--- a/src/app/modules/tabletop/tabletop/tabletop.component.html
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.html
@@ -1,32 +1,51 @@
 <div class="screen">
-  <aside class="z-10 bg-white absolute h-screen duration-100"
-  [ngClass]="menu ? ' w-3/12 min-w-64' : ' w-16 '">
-  <section class="w-full bg-white rounded-r-md flex flex-col h-full p-2"
-  [ngClass]="!menu ? ' items-start ' :'' ">
-  <div class="w-full">
-    <button (click)="toggleMenu()" class="pt-3 ml-4 h-12 flex-grow-0 flex-shrink-0">
-      <i class="pi pi-bars"></i>
-    </button>
-  </div>
-  @if(menu){
-    <div class="chat">
-      @for (msg of messages; track $index) {
-      <div class="message" [ngClass]="{' my-message ' : checkMessageUser(msg)}">
-        <p class="m-0 text-white">
-          @if(!checkMessageUser(msg)){
-          <span class="font-bold text-zinc-800 mr-1">{{msg.user.username}}:</span>
-          }
-          {{ msg.content }}
-        </p>
+  <aside
+    class="z-10 bg-white absolute h-screen duration-100 rounded-tr-lg rounded-br-lg"
+    [ngClass]="menu ? ' w-3/12 min-w-64' : ' w-16 '"
+  >
+    <section
+      class="w-full bg-white rounded-r-md flex flex-col h-full p-2"
+      [ngClass]="!menu ? ' items-start ' : ''"
+    >
+      <div class="w-full flex items-center pl-4">
+        <button
+          (click)="toggleMenu()"
+          class="h-12 flex-grow-0 flex-shrink-0"
+        >
+          <i class="pi pi-bars"></i>
+        </button>
+      </div>
+      @if(menu){
+      <div class="chat">
+        @for (msg of messages; track $index) {
+        <div
+          class="message"
+          [ngClass]="{ ' my-message ': checkMessageUser(msg) }"
+        >
+          <p class="m-0 text-white">
+            @if(!checkMessageUser(msg)){
+            <span class="font-bold text-zinc-800 mr-1"
+              >{{ msg.user.username }}:</span
+            >
+            }
+            {{ msg.content }}
+          </p>
+        </div>
+        }
+      </div>
+      <div class="w-full">
+        <input
+          fluid
+          type="text"
+          pInputText
+          [(ngModel)]="msg"
+          [ngModelOptions]="{ standalone: true }"
+          placeholder="Digite sua mensagem..."
+          maxlength="255"
+        />
+        <p-button fluid label="Enviar" (click)="sendNewMessage()" />
       </div>
       }
-    </div>
-    <div class="w-full">
-      <input fluid type="text" pInputText [(ngModel)]="msg" [ngModelOptions]="{standalone: true}"
-      placeholder="Digite sua mensagem..." maxlength="255"/>
-      <p-button fluid label="Enviar" (click)="sendNewMessage()" />
-    </div>
-  }
-</section>
-</aside>
+    </section>
+  </aside>
 </div>
